# localllm

./: .gitignore  APL.txt  Cargo.toml  MIT.txt  README.md  build.rs
examples/: main.rs
include/: myparser.h
src/: lib.rs  llm.rs  main.cpp
