[package]
name = "localllm"
version = "0.1.0"
edition = "2021"
description = "qwen2 model lib by llama.cpp"
license = "MIT OR Apache-2.0"
categories = [""]
repository = "https://gitlab.com/hjiayz/localllm"
authors = ["hjiayz <hjiayz@163.com>"]
build = "build.rs"
include = [
    "/include/*",
    "/examples/main.rs",
    "build.rs",
    "/src",
    "/llama.cpp/**/*.c",
    "/llama.cpp/**/*.h",
    "/llama.cpp/**/*.hpp",
    "/llama.cpp/**/*.cpp",
    "/llama.cpp/ggml/src/**/*",
    "README.md",
    "MIT.txt",
    "APL.txt",
    "Cargo.toml"
]

[dependencies]
anyhow = "1.0"
cxx = "1.0"
schemars = "0.8"
serde_json = "1.0"
regex = "1.10"
serde = {version ="1.0",features = ["derive"]}

[build-dependencies]
cxx-build = "1.0"